Update and add feature
